# stereovision

./: Application.h  CapZED3D.h  ConBasic.h  ControlB.h  ControlUI.h  ICapture.h  IDisparity.h  IMotor.h  MotorA.h  ProcCascades.h  ProcessB.h  ProcessBGS.h  ProcessC.h  ProcessIPM.h  ProcessK.h  ProcessPython.h  ProcessS.h  README.md  config.ini  extrinsics.yml  how to use config_ini.txt  kernel.cu  used_libs.txt
OOP/: Application.h  Calibration.cpp  Calibration.h  CapZED3D.h  CapZEN3D.h  Capture.h  ConBasic.h  DepthMap.cpp  DepthMap.h  DetectionA.h  DispSGBM.h  Gui.h  Hlavny.cpp  ICapture.h  IControl.h  IDetection.h  IDisparity.h  IMotor.h  IPM.cpp  IProcess.h  LineAssist.cpp  LineAssist.h  ProcCascades.h  ProcessA.h  ProcessB.h  ProcessBGS.h  ProcessC.h  ProcessIPM.h  ProcessK.h  SGBM.h  Structures.cpp  Structures.h  config.ini  config.yml  disparity.yml  extrinsics.yml  filter.yml  intrinsics.yml  laneAssist.yml  main.cpp
OOP/classlbp/: README.txt  cascade.xml  params.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage17.xml  stage18.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
ZED/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  ProcessC.h  ZED_Stereovision  cmake_install.cmake  config.ini  config.ini~  video_.avi
ZED/src/: Application.h  Application.h~  CapZED3D.h  CapZED3D.h~  ControlA.h  DetectionA.h  DispSGBM.h  DispSGBM.h~  ICapture.h  IControl.h  IControl.h~  IDetection.h  IDisparity.h  IMotor.h  IPM.cpp  IProcess.h  MotorA.h  ProcCascades.h  ProcessA.h  ProcessA.h~  ProcessBGS.h  ProcessBGS.h~  ProcessC.h  ProcessC.h~  ProcessIPM.h  ProcessIPM.h~  ProcessK.h  ProcessS.h  config.ini  intrinsics.yml  main.cpp
ZED/zaloha/bezbuffra/: ProcessC.h
ZED/zaloha/mato/: ProcessC.h
ZED/zaloha/procc/: ProcessC.h
result/: predict_selectionsearch1.3.py  predict_selectionsearch1.3.py~  predictions_final.py  predictions_semifinal.py  predictions_trackbars.py  selectivesearch.py  selectivesearch.py~  selectivesearch_opencv.py  selectivesearch_opencv_2.0.py  selectivesearch_opencv_2.0.py~
